# m3i_realizations

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/measure/: measure.cpp
src/rels/: m3i_0.cpp  m3i_0.h  m3i_1.cpp  m3i_1.h  m3i_2.cpp
src/rels/0/: m3i.cpp  m3i.h
src/rels/1/: m3i.cpp  m3i.h
src/rels/2/: m3i.cpp  m3i.h
src/rels/3/: m3i.cpp  m3i.h
src/rels/4/: m3i.cpp  m3i.h
src/rels/5/: m3i.cpp  m3i.h
src/rels/m3i/: m3i.h
tests_output/: measure_0  measure_1  measure_2  measure_3
